; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_d3dx9_base_effect_set_bool_array.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_d3dx9_base_effect_set_bool_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dx9_base_effect = type { i32 }
%struct.d3dx_parameter = type { i32, i32, i32, i64 }

@.str = private unnamed_addr constant [10 x i8] c"Class %s\0A\00", align 1
@D3DXPT_INT = common dso_local global i32 0, align 4
@D3D_OK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"Unhandled class %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"Parameter not found.\0A\00", align 1
@D3DERR_INVALIDCALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.d3dx9_base_effect*, i32, i32*, i64)* @d3dx9_base_effect_set_bool_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @d3dx9_base_effect_set_bool_array(%struct.d3dx9_base_effect* %0, i32 %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.d3dx9_base_effect*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.d3dx_parameter*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store %struct.d3dx9_base_effect* %0, %struct.d3dx9_base_effect** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  %13 = load %struct.d3dx9_base_effect*, %struct.d3dx9_base_effect** %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call %struct.d3dx_parameter* @get_valid_parameter(%struct.d3dx9_base_effect* %13, i32 %14)
  store %struct.d3dx_parameter* %15, %struct.d3dx_parameter** %10, align 8
  %16 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %17 = icmp ne %struct.d3dx_parameter* %16, null
  br i1 %17, label %18, label %70

18:                                               ; preds = %4
  %19 = load i64, i64* %9, align 8
  %20 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %21 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = sext i32 %22 to i64
  %24 = udiv i64 %23, 4
  %25 = trunc i64 %24 to i32
  %26 = call i64 @min(i64 %19, i32 %25)
  store i64 %26, i64* %12, align 8
  %27 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %28 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @debug_d3dxparameter_class(i32 %29)
  %31 = call i32 @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %30)
  %32 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %33 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  switch i32 %34, label %63 [
    i32 130, label %35
    i32 128, label %35
    i32 132, label %35
    i32 131, label %62
    i32 129, label %62
  ]

35:                                               ; preds = %18, %18, %18
  store i64 0, i64* %11, align 8
  br label %36

36:                                               ; preds = %55, %35
  %37 = load i64, i64* %11, align 8
  %38 = load i64, i64* %12, align 8
  %39 = icmp ult i64 %37, %38
  br i1 %39, label %40, label %58

40:                                               ; preds = %36
  %41 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %42 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %41, i32 0, i32 3
  %43 = load i64, i64* %42, align 8
  %44 = inttoptr i64 %43 to i32*
  %45 = load i64, i64* %11, align 8
  %46 = getelementptr inbounds i32, i32* %44, i64 %45
  %47 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %48 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %47, i32 0, i32 2
  %49 = load i32, i32* %48, align 8
  %50 = load i32*, i32** %8, align 8
  %51 = load i64, i64* %11, align 8
  %52 = getelementptr inbounds i32, i32* %50, i64 %51
  %53 = load i32, i32* @D3DXPT_INT, align 4
  %54 = call i32 @set_number(i32* %46, i32 %49, i32* %52, i32 %53)
  br label %55

55:                                               ; preds = %40
  %56 = load i64, i64* %11, align 8
  %57 = add i64 %56, 1
  store i64 %57, i64* %11, align 8
  br label %36

58:                                               ; preds = %36
  %59 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %60 = call i32 @set_dirty(%struct.d3dx_parameter* %59)
  %61 = load i32, i32* @D3D_OK, align 4
  store i32 %61, i32* %5, align 4
  br label %73

62:                                               ; preds = %18, %18
  br label %69

63:                                               ; preds = %18
  %64 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %65 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %64, i32 0, i32 1
  %66 = load i32, i32* %65, align 4
  %67 = call i32 @debug_d3dxparameter_class(i32 %66)
  %68 = call i32 @FIXME(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i32 %67)
  br label %69

69:                                               ; preds = %63, %62
  br label %70

70:                                               ; preds = %69, %4
  %71 = call i32 @WARN(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  %72 = load i32, i32* @D3DERR_INVALIDCALL, align 4
  store i32 %72, i32* %5, align 4
  br label %73

73:                                               ; preds = %70, %58
  %74 = load i32, i32* %5, align 4
  ret i32 %74
}

declare dso_local %struct.d3dx_parameter* @get_valid_parameter(%struct.d3dx9_base_effect*, i32) #1

declare dso_local i64 @min(i64, i32) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debug_d3dxparameter_class(i32) #1

declare dso_local i32 @set_number(i32*, i32, i32*, i32) #1

declare dso_local i32 @set_dirty(%struct.d3dx_parameter*) #1

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32 @WARN(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
